--- a/index.html
+++ b/index.html
@@ -5915,6 +5915,28 @@
    </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i> 
+     <h3>SARS-CoV-2 infects human pancreatic β-cells and elicits β-cell impairment</h3>
+     <p class="price">Source: Cell, Published on May 18, 2021</p>
+     <a href="https://doi.org/10.1016/j.cmet.2021.05.013" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i> 
+     <h3>Diverse Functional Autoantibodies in Patients with COVID-19</h3>
+     <p class="price">Source: Nature, Published on May 19, 2021</p>
+     <a href="https://doi.org/10.1038/s41586-021-03631-y" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
      <i class="fas fa-exclamation-circle fa-2x">Media News</i> 
      <h3>Even With The No-Mask Guidance, Some Pockets Of The U.S. Aren't Ready To Let Go</h3>
      <p class="price">Source: NPR, Published on May 19, 2021</p>
