--- a/index.html
+++ b/index.html
@@ -8083,12 +8083,12 @@
 
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> 
 <script defer src="js/swiperaction.js"></script>
+<script src="js/d3.v6.min.js" charset="utf-8"></script> 
 <script async src="js/dataviz.js"></script>
 <script async src="js/datacollection.js"></script>
 <script async src="js/cdcdatacollection.js"></script>
 <script defer src="js/main.js"></script>
 <script src="js/anime.min.js"></script>
-<script src="js/d3.v6.min.js"></script> 
 <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
 </body>
