--- a/index.html
+++ b/index.html
@@ -6424,6 +6424,17 @@
 <div class="article-container">
     <div class="news-box news-box-a">
      <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>SARS-CoV-2 mutations, vaccines, and immunity: implication of variants of concern</h3>
+     <p class="price">Source: Nature, Accessed on May 22, 2021</p>
+     <a href="https://doi.org/10.1038/s41392-021-00623-2" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
      <h3>Environmental risk factors of airborne viral transmission: Humidity, Influenza and SARS-CoV-2 in the Netherlands</h3>
      <p class="price">Source: Science Direct, Accessed on May 22, 2021</p>
      <a href="https://doi.org/10.1016/j.sste.2021.100432" class="btn">Link to Article</a>
@@ -6596,7 +6607,18 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>   
+   </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Media News</i>  
+     <h3>Pfizer Initiates Study Exploring Coadministration of Its 20-valent Pneumococcal Conjugate Vaccine Candidate Along With a Third Dose of the Pfizer-BioNTech COVID-19 Vaccine in Older Adults</h3>
+     <p class="price">Source: Pfizer and BioNTech, Published on May 24, 2021</p>
+     <a href="https://www.pfizer.com/news/press-release/press-release-detail/pfizer-initiates-study-exploring-coadministration-its-20" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
    
   
   
