--- a/covidnews.html
+++ b/covidnews.html
@@ -353,6 +353,17 @@
    </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>Locked-in Syndrome in a Young Patient Due to SARS-CoV-2: A Case Report</h3>
+     <p class="price">Source: Frontiers, Published on October 15, 2020</p>
+     <a href="https://doi.org/10.3389/fmed.2020.574690" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Quantitative assessment of olfactory dysfunction accurately detects asymptomatic COVID-19 carriers</h3>
      <p class="price">Source: Lancet on October 16, 2020</p>
      <a href="https://doi.org/10.1016/j.eclinm.2020.100575" class="btn">Link to Study</a>
