--- a/index.html
+++ b/index.html
@@ -5960,6 +5960,17 @@
 <div class="article-container">
     <div class="news-box news-box-a">
      <i class="fas fa-exclamation-circle fa-2x">Non Media News</i> 
+     <h3>Preexisting and post-COVID-19 immune responses to SARS-CoV-2 in cancer patients</h3>
+     <p class="price">Source: American Association for Cancer Research, Published on May 19, 2021</p>
+     <a href="https://doi.org/10.1158/2159-8290.CD-21-0191" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i> 
      <h3>Maternal and perinatal outcomes of pregnant women with SARS-CoV-2 infection at the time of birth in England: national cohort study</h3>
      <p class="price">Source: American Journal of Obstetrics and Gynecology, Published on May 19, 2021</p>
      <a href="https://doi.org/10.1016/j.ajog.2021.05.016" class="btn">Link to Article</a>
@@ -6739,7 +6750,40 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>    
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>An infectivity-enhancing site on the SARS-CoV-2 spike protein targeted by antibodies</h3>
+     <p class="price">Source: Cell, Published on May 25, 2021</p>
+     <a href="https://doi.org/10.1016/j.cell.2021.05.032" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>Impacts of social distancing policies on mobility and COVID-19 case growth in the US</h3>
+     <p class="price">Source: Nature, Published on May 25, 2021</p>
+     <a href="https://doi.org/10.1038/s41467-021-23404-5" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Media News</i>  
+     <h3>Moderna Announces TeenCOVE Study of its COVID-19 Vaccine in Adolescents Meets Primary Endpoint and Plans to Submit Data to Regulators in Early June</h3>
+     <p class="price">Source: Moderna, Published on May 25, 2021</p>
+     <a href="https://investors.modernatx.com/news-releases/news-release-details/moderna-announces-teencove-study-its-covid-19-vaccine" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>   
    
   
   
