--- a/covidnews.html
+++ b/covidnews.html
@@ -1888,7 +1888,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>    
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Comparing the fit of N95, KN95, surgical, and cloth face masks and assessing the accuracy of fit checking</h3>
+     <p class="price">Source: PLOS, Published on January 22, 2021</p>
+     <a href="https://doi.org/10.1371/journal.pone.0245688" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Resurgence of COVID-19 in Manaus, Brazil, despite high seroprevalence</h3>
