--- a/index.html
+++ b/index.html
@@ -6732,6 +6732,17 @@
 <div class="article-container">
     <div class="news-box news-box-a">
      <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>Tackling COVID-19 with neutralizing monoclonal antibodies</h3>
+     <p class="price">Source: Cell, Published on May 25, 2021</p>
+     <a href="https://doi.org/10.1016/j.cell.2021.05.005" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
      <h3>Acute and long-term disruption of glycometabolic control after SARS-CoV-2 infection</h3>
      <p class="price">Source: Nature, Published on May 25, 2021</p>
      <a href="https://doi.org/10.1038/s42255-021-00407-6" class="btn">Link to Article</a>
@@ -7126,6 +7137,17 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>Prevalence of Clinical and Subclinical Myocarditis in Competitive Athletes With Recent SARS-CoV-2 Infection</h3>
+     <p class="price">Source: Jama Network, Published on May 27, 2021</p>
+     <a href="http://jamanetwork.com/article.aspx?doi=10.1001/jamacardio.2021.2065" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
    
   
   
