--- a/index.html
+++ b/index.html
@@ -7250,6 +7250,28 @@
    </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>Estimating direct and spill-over impacts of political elections on COVID-19 transmission using synthetic control methods</h3>
+     <p class="price">Source: PLOS, Published on May 27, 2021</p>
+     <a href="https://doi.org/10.1371/journal.pcbi.1008959" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>Safety, Immunogenicity, and Efficacy of the BNT162b2 Covid-19 Vaccine in Adolescents</h3>
+     <p class="price">Source: New England Journal of Medicine (NEJM), Published on May 27, 2021</p>
+     <a href="https://www.nejm.org/doi/full/10.1056/NEJMoa2107456" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
      <i class="fas fa-exclamation-circle fa-2x">Media News</i>  
      <h3>As Olympic opposition intensifies, Japan extends coronavirus state of emergency until late June</h3>
      <p class="price">Source: Washington Post, Published on May 28, 2021</p>
@@ -7262,9 +7284,10 @@
 <div class="article-container">
     <div class="news-box news-box-a">
      <i class="fas fa-exclamation-circle fa-2x">Media News</i>  
-     <h3>Johnson & Johnson single-shot Covid vaccine approved for use in UK</h3>
-     <p class="price">Source: Guardian, Published on May 28, 2021</p>
-     <a href="https://www.theguardian.com/world/2021/may/28/johnson-johnson-single-shot-covid-vaccine-approved-for-use-in-uk" class="btn">Link to Article</a>
+     <h3>Regulatory approval of COVID-19 Vaccine Janssen</h3>
+     <p class="price">Source: Gov Uk, Published on May 28, 2021</p>
+     <a href="https://www.gov.uk/government/publications/regulatory-approval-of-covid-19-vaccine-janssen" class="btn">Link to Article</a> 
+     <a href="https://www.theguardian.com/world/2021/may/28/johnson-johnson-single-shot-covid-vaccine-approved-for-use-in-uk" class="btn">Link to Media Article</a>
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
