--- a/covidnews.html
+++ b/covidnews.html
@@ -165,16 +165,26 @@
    </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
-     <h3>COVID-19 now No. 3 cause of death in US</h3>
-     <p class="price">Source: The Hill on August 17, 2020</p>
-     <a href="javascript:void(0)" class="alert-btn"><i class="fas fa-exclamation-triangle fa-fw" aria-hidden="true"></i>Interesting Read</a>
-     <a href="https://thehill.com/policy/healthcare/512427-covid-19-now-no-3-cause-of-death-in-us" class="btn">Link to Article</a> 
-     <div class="like_button_container" data-commentid="2"></div>  
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>It Is Time to Address Airborne Transmission of Coronavirus Disease 2019 (COVID-19)</h3>
+     <p class="price">Source: Oxford Academics, Published on July 6, 2020</p>
+     <a href="https://doi.org/10.1093/cid/ciaa939" class="btn">Link to Article</a>
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>SARS-CoV-2-specific T cell immunity in cases of COVID-19 and SARS, and uninfected controls</h3>
+     <p class="price">Source: Nature, Published on July 15, 2020</p>
+     <a href="https://doi.org/10.1038/s41586-020-2550-z" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
      <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
@@ -186,6 +196,18 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>COVID-19 now No. 3 cause of death in US</h3>
+     <p class="price">Source: The Hill on August 17, 2020</p>
+     <a href="javascript:void(0)" class="alert-btn"><i class="fas fa-exclamation-triangle fa-fw" aria-hidden="true"></i>Interesting Read</a>
+     <a href="https://thehill.com/policy/healthcare/512427-covid-19-now-no-3-cause-of-death-in-us" class="btn">Link to Article</a> 
+     <div class="like_button_container" data-commentid="2"></div>  
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Post-traumatic stress disorder: A differential diagnostic consideration for COVID-19 survivors</h3>
@@ -9681,6 +9703,17 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>       
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>SARS-CoV-2 Spike Protein Impairs Endothelial Function via Downregulation of ACE 2</h3>
+     <p class="price">Source: AHA Journal, Published on March 31, 2021</p>
+     <a href="https://doi.org/10.1161/CIRCRESAHA.121.318902" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Characterizing COVID-19 clinical phenotypes and associated comorbidities and complication profiles</h3>
