--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 <section class="tab-content wrapper-alt info">
   <div id="tab-1-content" class="tab-content-item show">
     <h1>Vaccine Administration (Non Identifed Vaccine Excluded)</h1>
-    <h2>Last Updated: 5/24/2021</h2>
+    <h2>Last Updated: 5/31/2021</h2>
       <div id="pfizer1"></div>
     <div>
       <div id="pfizer2"></div>
@@ -181,7 +181,7 @@
 <section class="tab-content wrapper-alt info">
   <div id="tab-2-content" class="tab-content-item">
     <h1>Vaccine Delievered (Non Identifed Vaccine Excluded)</h1>
-    <h2>Last Updated: 5/24/2021</h2>
+    <h2>Last Updated: 5/31/2021</h2>
       <div id="moderna1"></div>
     <div>
       <div id="moderna2"></div>
@@ -204,7 +204,7 @@
 <section class="tab-content wrapper-alt info">
   <div id="tab-3-content" class="tab-content-item">
     <h1>Fully Vacinated (Non Identifed Vaccine Excluded)</h1>
-    <h2>Last Updated: 5/24/2021</h2>
+    <h2>Last Updated: 5/31/2021</h2>
       <div id="jessen1"></div>
     <div>
       <div id="jessen2"></div>
@@ -9385,5 +9385,6 @@
 <script src="js/anime.min.js"></script>
 <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
+<script defer src="js/news_container.js"></script>
 </body>
 </html>
