--- a/index.html
+++ b/index.html
@@ -7701,7 +7701,8 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>     
+   </div>
+<div id="article-main-june2021"></div>  
    
   
   
