--- a/index.html
+++ b/index.html
@@ -7194,6 +7194,17 @@
    </div>   
 <div class="article-container">
     <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>Risk of reinfection after seroconversion to SARS-CoV-2: A population-based propensity-score matched cohort study</h3>
+     <p class="price">Source: Oxford Academics, Accessed on May 27, 2021</p>
+     <a href="https://doi.org/10.1093/cid/ciab495" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
      <i class="fas fa-exclamation-circle fa-2x">Media News</i>  
      <h3>How to win $1.5 million in California's new vaccine lottery</h3>
      <p class="price">Source: SF Gate, Published on May 27, 2021</p>
@@ -7693,6 +7704,17 @@
    </div>  
 <div class="article-container">
     <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>NIH clinical trial evaluating mixed COVID-19 vaccine schedules begins</h3>
+     <p class="price">Source: National Institute of Health, Accessed on June 1, 2021</p>
+     <a href="https://www.nih.gov/news-events/news-releases/nih-clinical-trial-evaluating-mixed-covid-19-vaccine-schedules-begins" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
      <i class="fas fa-exclamation-circle fa-2x">Media News</i>  
      <h3>NRx Pharmaceuticals Announces Positive Results for ZYESAMI™ (Aviptadil-acetate) and Submits Emergency Use Authorization Application to US Food and Drug Administration to Treat Critical COVID-19 in Patients Suffering from Respiratory Failure</h3>
      <p class="price">Source: Nrx Pharmaceuticals, Published on June 1, 2021</p>
@@ -7900,6 +7922,17 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>Reducing COVID 19 transmission and strengthening vaccine uptake among migrant populations in the EU/EEA</h3>
+     <p class="price">Source: European Centre for Disease Prevention and Control (ECDC), Published on June 3, 2021</p>
+     <a href="https://www.ecdc.europa.eu/en/publications-data/covid-19-migrants-reducing-transmission-and-strengthening-vaccine-uptake" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
      <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
