--- a/index.html
+++ b/index.html
@@ -7958,6 +7958,28 @@
 <div class="article-container">
     <div class="news-box news-box-a">
      <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>Symptomatic Acute Myocarditis in Seven Adolescents Following Pfizer-BioNTech COVID-19 Vaccination</h3>
+     <p class="price">Source: Pediatrics, Published on June 3, 2021</p>
+     <a href="https://doi.org/10.1542/peds.2021-052478 " class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>Neutralising antibody activity against SARS-CoV-2 VOCs B.1.617.2 and B.1.351 by BNT162b2 vaccination</h3>
+     <p class="price">Source: Lancet, Published on June 3, 2021</p>
+     <a href="https://doi.org/10.1016/S0140-6736(21)01290-3" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
      <h3>Lack of Trust, Conspiracy Beliefs, and Social Media Use Predict COVID-19 Vaccine Hesitancy</h3>
      <p class="price">Source: MDPI, Published on June 3, 2021</p>
      <a href="https://www.mdpi.com/2076-393X/9/6/593/htm" class="btn">Link to Article</a>
