--- a/covidnews.html
+++ b/covidnews.html
@@ -11568,7 +11568,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>    
-   </div>      
+   </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>First case of postmortem study in a patient vaccinated against SARS-CoV-2</h3>
+     <p class="price">Source: International Journal of Infectious Disease, Published on April 16, 2021</p>
+     <a href="https://doi.org/10.1016/j.ijid.2021.04.053" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Functional autoantibodies against G-protein coupled receptors in patients with persistent post-COVID-19 symptoms</h3>
