--- a/covidnews.html
+++ b/covidnews.html
@@ -130,7 +130,18 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>        
+   </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <i class="fas fa-exclamation-circle fa-2x">Non Media News</i>  
+     <h3>Measles virus infection diminishes preexisting antibodies that offer protection from other pathogens</h3>
+     <p class="price">Source: Science Magazine, Published on November 1, 2019</p>
+     <a href="https://doi.org/10.1126/science.aay6485" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>High expression of ACE2 receptor of 2019-nCoV on the epithelial cells of oral mucosa</h3>
@@ -1890,7 +1901,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>      
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>COVID-19 and the heart: What have we learned?</h3>
+     <p class="price">Source: Harvard Medical School on January 8, 2021</p>
+     <a href="https://www.health.harvard.edu/blog/covid-19-and-the-heart-what-have-we-learned-2021010621603" class="btn">Link to Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>New York City Renters Owe More Than $1 Billion in Unpaid Rent, Survey Finds</h3>
@@ -2266,6 +2287,16 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Tracing the origins of SARS-COV-2 in coronavirus phylogenies: a review</h3>
+     <p class="price">Source: Springer, Published on February 4, 2021</p>
+     <a href="https://doi.org/10.1007/s10311-020-01151-1" class="btn">Link to Research Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Association between antidepressant use and reduced risk of intubation or death in hospitalized patients with COVID-19: results from an observational study</h3>
@@ -4020,7 +4051,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>    
+   </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Why are people developing diabetes after having COVID-19?</h3>
+     <p class="price">Source: Ohio State University Wexner Medical Center, Published on February 19, 2021</p>
+     <a href="https://wexnermedical.osu.edu/blog/why-are-people-developing-diabetes-after-having-covid19" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Causes of death and comorbidities in hospitalized patients with COVID-19</h3>
@@ -13070,7 +13111,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>    
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Risk of rapid evolutionary escape from biomedical interventions targeting SARS-CoV-2 spike protein</h3>
+     <p class="price">Source: PLOS, Published on April 28, 2021</p>
+     <a href="https://doi.org/10.1371/journal.pone.0250780" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>BioNTech boss: Europe will reach herd immunity this summer</h3>
@@ -13471,7 +13522,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>    
+   </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>A computational model for predicting changes in infection dynamics due to leakage through N95 respirators</h3>
+     <p class="price">Source: Nature, Published on May 21, 2021</p>
+     <a href="https://doi.org/10.1038/s41598-021-89604-7" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
     
     
 
