--- a/globalcases.html
+++ b/globalcases.html
@@ -1030,248 +1030,248 @@
       <td class="qaDate"></td>     
      </tr>
      <tr>
-      <td scope="row">Republic of Korea</td>
+      <td class="country151" scope="row">Republic of Korea</td>
       <td class="krCaseConfirm"></td>
       <td class="krCaseDeath"></td>
       <td class="krDate"></td>       
      </tr>
      <tr>
-      <td scope="row">Republic of Kosovo</td>
+      <td class="country152" scope="row">Republic of Kosovo</td>
       <td class="xkCaseConfirm"></td>
       <td class="xkCaseDeath"></td>
       <td class="xkDate"></td>        
      </tr>
      <tr>
-      <td scope="row">Republic of Moldova</td>
+      <td class="country153" scope="row">Republic of Moldova</td>
       <td class="mdCaseConfirm"></td>
       <td class="mdCaseDeath"></td>
       <td class="mdDate"></td>        
      </tr>
      <tr>
-      <td scope="row">Republic of North Macedonia</td>
+      <td class="country154" scope="row">Republic of North Macedonia</td>
       <td class="mkCaseConfirm"></td>
       <td class="mkCaseDeath"></td>
       <td class="mkDate"></td>        
      </tr>
      <tr>
-      <td scope="row">Reunion</td>
+      <td class="country155" scope="row">Reunion</td>
       <td class="reCaseConfirm"></td>
       <td class="reCaseDeath"></td>
       <td class="reDate"></td>      
      </tr>
      <tr>
-      <td scope="row">Romania</td>
+      <td class="country156" scope="row">Romania</td>
       <td class="roCaseConfirm"></td>
       <td class="roCaseDeath"></td>
       <td class="roDate"></td>      
      </tr>
      <tr>
-      <td scope="row">Russian Federation</td>
+      <td class="country157" scope="row">Russian Federation</td>
       <td class="ruCaseConfirm"></td>
       <td class="ruCaseDeath"></td>
       <td class="ruDate"></td>       
      </tr>
      <tr>
-      <td scope="row">Rwanda</td>
+      <td class="country158" scope="row">Rwanda</td>
       <td class="rwCaseConfirm"></td>
       <td class="rwCaseDeath"></td>
       <td class="rwDate"></td>       
      </tr>
      <tr>
-      <td scope="row">Saint Barthelemy</td>
+      <td class="country159" scope="row">Saint Barthelemy</td>
       <td class="blCaseConfirm"></td>
       <td class="blCaseDeath"></td>
       <td class="blDate"></td>        
      </tr>
      <tr>
-      <td scope="row">Saint Kitts and Nevis</td>
+      <td class="country160" scope="row">Saint Kitts and Nevis</td>
       <td class="knCaseConfirm"></td>
       <td class="knCaseDeath"></td>
       <td class="knDate"></td>       
      </tr>
      <tr>
-      <td scope="row">Saint Lucia</td>
+      <td class="country161" scope="row">Saint Lucia</td>
       <td class="lcCaseConfirm"></td>
       <td class="lcCaseDeath"></td>
       <td class="lcDate"></td>       
      </tr>
      <tr>
-      <td scope="row">Saint Martin</td>
+      <td class="country162" scope="row">Saint Martin</td>
       <td class="mfCaseConfirm"></td>
       <td class="mfCaseDeath"></td>
       <td class="mfDate"></td>        
      </tr>
      <tr>
-      <td scope="row">Saint Vincent and the Grenadines</td>
+      <td class="country163" scope="row">Saint Vincent and the Grenadines</td>
       <td class="vcCaseConfirm"></td>
       <td class="vcCaseDeath"></td>
       <td class="vcDate"></td>        
      </tr>
      <tr>
-      <td scope="row">Samoa</td>
+      <td class="country164" scope="row">Samoa</td>
       <td class="wsCaseConfirm"></td>
       <td class="wsCaseDeath"></td>
       <td class="wsDate"></td>        
      </tr>
      <tr>
-      <td scope="row">San Marino</td>
+      <td class="country165" scope="row">San Marino</td>
       <td class="smCaseConfirm"></td>
       <td class="smCaseDeath"></td>
       <td class="smDate"></td>      
      </tr>
      <tr>
-      <td scope="row">Sao Tome and Principle</td>
+      <td class="country166" scope="row">Sao Tome and Principle</td>
       <td class="stCaseConfirm"></td>
       <td class="stCaseDeath"></td>
       <td class="stDate"></td>      
      </tr>
      <tr>
-      <td scope="row">Saudia Arabia</td>
+      <td class="country167" scope="row">Saudia Arabia</td>
       <td class="saCaseConfirm"></td>
       <td class="saCaseDeath"></td>
       <td class="saDate"></td>      
      </tr>
      <tr>
-      <td scope="row">Senegal</td>
+      <td class="country168" scope="row">Senegal</td>
       <td class="snCaseConfirm"></td>
       <td class="snCaseDeath"></td>
       <td class="snDate"></td>       
      </tr>
      <tr>
-      <td scope="row">Serbia</td>
+      <td class="country169" scope="row">Serbia</td>
       <td class="rsCaseConfirm"></td>
       <td class="rsCaseDeath"></td>
       <td class="rsDate"></td>      
      </tr>
      <tr>
-      <td scope="row">Seychelles</td>
+      <td class="country170" scope="row">Seychelles</td>
       <td class="scCaseConfirm"></td>
       <td class="scCaseDeath"></td>
       <td class="scDate"></td>     
      </tr>
      <tr>
-      <td scope="row">Sierra Leone</td>
+      <td class="country171" scope="row">Sierra Leone</td>
       <td class="slCaseConfirm"></td>
       <td class="slCaseDeath"></td>
       <td class="slDate"></td>       
      </tr>
      <tr>
-      <td scope="row">Singapore</td>
+      <td class="country172" scope="row">Singapore</td>
       <td class="sgCaseConfirm"></td>
       <td class="sgCaseDeath"></td>
       <td class="sgDate"></td>      
      </tr>
      <tr>
-      <td scope="row">Slovakia</td>
+      <td class="country173" scope="row">Slovakia</td>
       <td class="skCaseConfirm"></td>
       <td class="skCaseDeath"></td>
       <td class="skDate"></td>        
      </tr>
      <tr>
-      <td scope="row">Slovenia</td>
+      <td class="country174" scope="row">Slovenia</td>
       <td class="siCaseConfirm"></td>
       <td class="siCaseDeath"></td>
       <td class="siDate"></td>      
      </tr>
      <tr>
-      <td scope="row">Solomon Islands</td>
+      <td class="country175" scope="row">Solomon Islands</td>
       <td class="sbCaseConfirm"></td>
       <td class="sbCaseDeath"></td>
       <td class="sbDate"></td>        
      </tr>
      <tr>
-      <td scope="row">Somalia</td>
+      <td class="country176" scope="row">Somalia</td>
       <td class="soCaseConfirm"></td>
       <td class="soCaseDeath"></td>
       <td class="soDate"></td>        
      </tr>
      <tr>
-      <td scope="row">South Africa</td>
+      <td class="country177" scope="row">South Africa</td>
       <td class="zaCaseConfirm"></td>
       <td class="zaCaseDeath"></td>
       <td class="zaDate"></td>       
      </tr>
      <tr>
-      <td scope="row">South Sudan</td>
+      <td class="country178" scope="row">South Sudan</td>
       <td class="ssCaseConfirm"></td>
       <td class="ssCaseDeath"></td>
       <td class="ssDate"></td>       
      </tr>
      <tr>
-      <td scope="row">Spain</td>
+      <td class="country179" scope="row">Spain</td>
       <td class="esCaseConfirm"></td>
       <td class="esCaseDeath"></td>
       <td class="esDate"></td>       
      </tr>
      <tr>
-      <td scope="row">Sri Lanka</td>
+      <td class="country180" scope="row">Sri Lanka</td>
       <td class="lkCaseConfirm"></td>
       <td class="lkCaseDeath"></td>
       <td class="lkDate"></td>       
      </tr>
      <tr>
-      <td scope="row">State of Palestine</td>
+      <td class="country181" scope="row">State of Palestine</td>
       <td class="psCaseConfirm"></td>
       <td class="psCaseDeath"></td>
       <td class="psDate"></td>        
      </tr>
      <tr>
-      <td scope="row">Sudan</td>
+      <td class="country183" scope="row">Sudan</td>
       <td class="sdCaseConfirm"></td>
       <td class="sdCaseDeath"></td>
       <td class="sdDate"></td>        
      </tr>
      <tr>
-      <td scope="row">Suriname</td>
+      <td class="country184" scope="row">Suriname</td>
       <td class="srCaseConfirm"></td>
       <td class="srCaseDeath"></td>
       <td class="srDate"></td>      
      </tr>
      <tr>
-      <td scope="row">Swaziland</td>
+      <td class="country185" scope="row">Swaziland</td>
       <td class="szCaseConfirm"></td>
       <td class="szCaseDeath"></td>
       <td class="szDate"></td>       
      </tr>
      <tr>
-      <td scope="row">Sweden</td>
+      <td class="country186" scope="row">Sweden</td>
       <td class="seCaseConfirm"></td>
       <td class="seCaseDeath"></td>
       <td class="seDate"></td>       
      </tr>
      <tr>
-      <td scope="row">Switzerland</td>
-      <td class="chCaseConfirm"></td>
-      <td class="chCaseDeath"></td>
-      <td class="chDate"></td>        
+      <td class="country187" scope="row">Switzerland</td>
+      <td class="CaseConfirm187"></td>
+      <td class="CaseDeath187"></td>
+      <td class="Date197"></td>        
      </tr>
      <tr>
-      <td scope="row">Syrian Arab Republic</td>
-      <td class="syCaseConfirm"></td>
-      <td class="syCaseDeath"></td>
-      <td class="syDate"></td>       
+      <td class="country188" scope="row">Syrian Arab Republic</td>
+      <td class="CaseConfirm188"></td>
+      <td class="CaseDeath188"></td>
+      <td class="Date188"></td>       
      </tr>
      <tr>
-      <td scope="row">Taiwan</td>
-      <td class="twCaseConfirm"></td>
-      <td class="twCaseDeath"></td>
-      <td class="twDate"></td>       
+      <td class="country189" scope="row">Taiwan</td>
+      <td class="CaseConfirm189"></td>
+      <td class="CaseDeath189"></td>
+      <td class="Date189"></td>       
      </tr>
      <tr>
-      <td scope="row">Tajikistan</td>
-      <td class="tjCaseConfirm"></td>
-      <td class="tjCaseDeath"></td>
-      <td class="tjDate"></td>         
+      <td class="country190" scope="row">Tajikistan</td>
+      <td class="CaseConfirm190"></td>
+      <td class="CaseDeath190"></td>
+      <td class="Date190"></td>         
      </tr>
      <tr>
-      <td scope="row">Thailand</td>
-      <td class="thCaseConfirm"></td>
-      <td class="thCaseDeath"></td>
-      <td class="thDate"></td>         
+      <td class="country191" scope="row">Thailand</td>
+      <td class="CaseConfirm191"></td>
+      <td class="CaseDeath191"></td>
+      <td class="Date191"></td>         
      </tr>
      <tr>
       <td scope="row">Timor-Leste</td>
-      <td class="tlCaseConfirm"></td>
+      <td class="CaseConfirm"></td>
       <td class="tlCaseDeath"></td>
       <td class="tlDate"></td>        
      </tr>
